[package]
name = "soroban_contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.5.0"
wee_alloc = "0.4"
# alloc = { package = "alloc", version = "0.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.5.0", features = ["testutils"] }

[profile.release]
opt-level = 3
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true